# bible

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  shell.nix
revelations/: main.py
src/ai/lancedb/: groq_test.py  low_cost.py  main.py  notebook.py  story.txt  test.py
src/ai/lancedb/bible_lancedb/bible_embeddings.lance/_transactions/: 0-8b82f4ef-f59d-4494-a05b-3d94eeb31df6.txn  1-591f7555-90dc-4999-bbdd-62d251d26fea.txn  10-de756606-afea-4def-8092-f1f612ce1bec.txn  100-e6eb0131-b8b0-42a9-90d3-4df9fde7f4c4.txn  1000-3b3e0f52-ffb8-419b-8af1-4731dec8209c.txn  1001-67a93fcf-0393-4241-bc51-1b1b76bebdb9.txn  1002-4abcbc84-9347-4d12-b724-72b78d3aee1f.txn  1003-8f3759c1-7d06-455e-b559-ccb20626e2d2.txn  1004-73582fff-5c5f-43be-8beb-5340ca2d716e.txn  1005-5aec0ae2-06af-4e35-ae1c-dfa8b3bc7bd9.txn  1006-061e723d-bbfc-42fd-83a8-a941ab26e3ae.txn  1007-2570d09b-ee5d-4b05-8957-2c7c87aa2b78.txn  1008-3a675096-9c9a-4463-9d44-aec979383120.txn  1009-f40aa294-1914-4451-b1f5-bb0c108ae042.txn  101-c8f95d5f-0147-4ab7-94a6-014ec57b89e1.txn  1010-55dd205c-6b20-4067-a66d-aae7844ddad6.txn  1011-bb55d33f-bb77-4c29-8c98-c88b93ca8a6c.txn  1012-87c6ed01-092f-454e-8689-a50bceddd963.txn  1013-5f04d72f-3626-48a5-8a08-65919374e3fb.txn  1014-796a1867-762d-4c2b-b217-a27a37ab69ea.txn  1015-523558e5-5e15-4894-a353-01fbf1a0ade2.txn  1016-f2f4cd39-83fd-459e-aa1e-022a0a2e2586.txn  1017-e8caafe3-1318-4d82-98bd-17127a042106.txn  1018-c72f3ca6-8c19-41e7-be8d-6009a3f7ed9a.txn  1019-265450f4-bdfb-49d6-a5d5-ace676850100.txn  102-2564cca1-4bcf-4e4d-9ce1-fc974c4fb577.txn  (+6197 more)
(+13388 files in other folders)
